--- a/src/app/module/student/student.component.html
+++ b/src/app/module/student/student.component.html
@@ -6,3 +6,42 @@
     <button nz-button nzType="primary" nzSearch><i nz-icon nzType="search"></i></button>
   </ng-template>
 </div>
+<nz-table
+  nzShowSizeChanger
+  [nzData]="listOfStudentUser"
+  [nzFrontPagination]="false"
+  [nzShowQuickJumper]="true"
+  [nzLoading]="loading"
+  [nzTotal]="total"
+  [nzPageSize]="pageSize"
+  [nzPageIndex]="pageIndex"
+  [nzPageSizeOptions]="pageSizeOptions"
+  (nzQueryParams)="onQueryParamsChange($event)"
+>
+  <thead>
+  <tr>
+    <th nzColumnKey="name" [nzSortFn]="true">姓名</th>
+    <th nzColumnKey="studentId" [nzSortFn]="true">学号</th>
+    <th nzColumnKey="sex" [nzSortFn]="true">性别</th>
+    <th nzColumnKey="age" [nzSortFn]="true">年龄</th>
+    <th nzColumnKey="birthday" [nzSortFn]="true">出生日期</th>
+    <th nzColumnKey="apartment">公寓</th>
+    <th nzColumnKey="roomNum">寝室</th>
+    <th nzColumnKey="tel">电话</th>
+    <th nzColumnKey="email">邮箱</th>
+  </tr>
+  </thead>
+  <tbody>
+  <tr *ngFor="let data of listOfStudentUser">
+    <td>{{ data.name }}</td>
+    <td>{{ data.studentId }}</td>
+    <td>{{ data.sex | sex}}</td>
+    <td>{{ data.age }}</td>
+    <td>{{ data.birthday | date:'yyyy年MM月dd日' }}</td>
+    <td>{{ data.apartment.name }}</td>
+    <td>{{ data.roomNum }}</td>
+    <td>{{ data.tel }}</td>
+    <td>{{ data.email }}</td>
+  </tr>
+  </tbody>
+</nz-table>
