--- a/src/app/module/student/student.component.html
+++ b/src/app/module/student/student.component.html
@@ -1,9 +1,9 @@
 <div class="search-box">
   <nz-input-group nzSearch [nzAddOnAfter]="suffixIconButton">
-    <input type="text" nz-input placeholder="键入学号或姓名进行模糊搜索"/>
+    <input type="text" nz-input placeholder="键入学号或姓名进行模糊搜索" [(ngModel)]="searchKey" (keyup.enter)="onSearch()"/>
   </nz-input-group>
   <ng-template #suffixIconButton>
-    <button nz-button nzType="primary" nzSearch><i nz-icon nzType="search"></i></button>
+    <button nz-button nzType="primary" nzSearch (click)="onSearch()"><i nz-icon nzType="search"></i></button>
   </ng-template>
 </div>
 <nz-table
