--- a/src/app/module/leave/component/leave/leave.component.html
+++ b/src/app/module/leave/component/leave/leave.component.html
@@ -1,24 +1,74 @@
 <div class="search-box">
   <nz-input-group nzSearch [nzAddOnAfter]="suffixIconButton">
     <!--suppress HtmlFormInputWithoutLabel -->
-    <input type="text" nz-input placeholder="键入学号或姓名进行模糊搜索" [(ngModel)]="searchKey" (keyup.enter)="onSearch()"/>
+    <input type="text" nz-input placeholder="键入学号或姓名进行模糊搜索" [(ngModel)]="search.key" (keyup.enter)="onSearch()"/>
   </nz-input-group>
   <ng-template #suffixIconButton>
     <button nz-button nzType="primary" nzSearch (click)="onSearch()"><i nz-icon nzType="search"></i></button>
   </ng-template>
   <div class="search-condition">
     <nz-switch class="search-condition-item" [(ngModel)]="isAllowCondition"></nz-switch>
-    <nz-select class="search-condition-item" ngModel="lucy" [nzDisabled]="!isAllowCondition">
-      <nz-option nzValue="jack" nzLabel="所有类型"></nz-option>
-      <nz-option nzValue="lucy" nzLabel="课假+寝室假"></nz-option>
-      <nz-option nzValue="a" nzLabel="课假"></nz-option>
-      <nz-option nzValue="b" nzLabel="寝室假"></nz-option>
+    <nz-select class="search-condition-item" [(ngModel)]="search.leaveType" [nzDisabled]="!isAllowCondition">
+      <nz-option nzValue="" nzLabel="所有类型"></nz-option>
+      <nz-option nzValue="ALL_LEAVE" nzLabel="课假+寝室假"></nz-option>
+      <nz-option nzValue="CLASS_LEAVE" nzLabel="课假"></nz-option>
+      <nz-option nzValue="ROOM_LEAVE" nzLabel="寝室假"></nz-option>
     </nz-select>
-    <nz-select class="search-condition-item" ngModel="lucy" [nzDisabled]="!isAllowCondition">
-      <nz-option nzValue="jack" nzLabel="全部范围"></nz-option>
-      <nz-option nzValue="lucy" nzLabel="假期中"></nz-option>
-      <nz-option nzValue="a" nzLabel="已过期"></nz-option>
+    <nz-select class="search-condition-item" [(ngModel)]="search.effective" [nzDisabled]="!isAllowCondition">
+      <nz-option nzValue="" nzLabel="全部范围"></nz-option>
+      <nz-option nzValue="1" nzLabel="假期中"></nz-option>
+      <nz-option nzValue="0" nzLabel="已过期"></nz-option>
     </nz-select>
-    <nz-range-picker [nzDisabled]="!isAllowCondition" [nzPlaceHolder]="['假条开始日期起始','假条开始日期结束']" nzSeparator="-"></nz-range-picker>
+    <nz-range-picker [nzDisabled]="!isAllowCondition"
+                     [nzPlaceHolder]="['假条开始日期起始','假条开始日期结束']"
+                     [(ngModel)]="dateRange"
+                     nzSeparator="-"></nz-range-picker>
   </div>
 </div>
+<nz-table
+  nzShowSizeChanger
+  nzShowQuickJumper
+  nzTableLayout="fixed"
+  [nzData]="listOfData"
+  [nzFrontPagination]="false"
+  [nzLoading]="loading"
+  [nzTotal]="total"
+  [nzPageSize]="pageSize"
+  [nzPageIndex]="pageIndex"
+  [nzPageSizeOptions]="pageSizeOptions"
+  (nzQueryParams)="onQueryParamsChange($event)"
+>
+  <thead>
+  <tr>
+    <th nzWidth="60px"></th>
+    <th>姓名</th>
+    <th>学号</th>
+    <th>类型</th>
+    <th>开始日期</th>
+    <th>结束日期</th>
+    <th>公寓</th>
+    <th>寝室</th>
+    <th>电话</th>
+    <th>原因</th>
+  </tr>
+  </thead>
+  <tbody>
+  <ng-container *ngFor="let data of listOfData">
+    <tr>
+      <td [nzExpand]="expandSet.has(data.id)" (nzExpandChange)="onExpandChange(data.id, $event)"></td>
+      <td>{{ data.studentUser.name }}</td>
+      <td>{{ data.studentUser.studentId }}</td>
+      <td>{{ data.leaveType | leaveType}}</td>
+      <td>{{ data.startTime | date:'yyyy年MM月dd日'}}</td>
+      <td>{{ data.endTime | date:'yyyy年MM月dd日'}}</td>
+      <td>{{ data.studentUser.apartment.name }}</td>
+      <td>{{ data.studentUser.roomNum }}</td>
+      <td>{{ data.studentUser.tel }}</td>
+      <td>{{ data.reason }}</td>
+    </tr>
+    <tr [nzExpand]="expandSet.has(data.id)">
+      <app-comment [leaveReasons]="data.leaveReasonList" [id]="data.id" [canReply]="false"></app-comment>
+    </tr>
+  </ng-container>
+  </tbody>
+</nz-table>
