--- a/src/app/module/login/component/login/login.component.html
+++ b/src/app/module/login/component/login/login.component.html
@@ -9,7 +9,7 @@
       <nz-form-control nzErrorTip="请输入用户名!">
         <nz-input-group nzPrefixIcon="user">
           <!--suppress HtmlFormInputWithoutLabel -->
-          <input type="text" nz-input formControlName="username" placeholder="用户名"/>
+          <input type="text" name="username" nz-input formControlName="username" placeholder="用户名"/>
         </nz-input-group>
       </nz-form-control>
     </nz-form-item>
@@ -17,7 +17,7 @@
       <nz-form-control nzErrorTip="请输入密码!">
         <nz-input-group nzPrefixIcon="lock">
           <!--suppress HtmlFormInputWithoutLabel -->
-          <input type="password" nz-input formControlName="password" placeholder="密码"/>
+          <input type="password" name="password" nz-input formControlName="password" placeholder="密码"/>
         </nz-input-group>
       </nz-form-control>
     </nz-form-item>
