--- a/src/app/module/index/component/index/index.component.scss
+++ b/src/app/module/index/component/index/index.component.scss
@@ -10,6 +10,11 @@
   }
 }
 
+.user-panel {
+  float: right;
+  margin-right: 24px;
+}
+
 .logo-box {
   padding: 0 10px;
   line-height: 64px;
@@ -25,6 +30,10 @@
   position: relative;
   width: 36px;
   left: 12px;
+}
+
+.password-visible {
+  cursor: pointer;
 }
 
 nz-header {
