--- a/src/app/module/statistics/component/statistics/statistics.component.html
+++ b/src/app/module/statistics/component/statistics/statistics.component.html
@@ -1,1 +1,11 @@
-<p>statistics works!</p>
+<div nz-row>
+  <div nz-col nzSpan="8">
+    <div #echartsRoom class="realtime-echarts"></div>
+  </div>
+  <div nz-col nzSpan="8">
+    <div #echartsLeave class="realtime-echarts"></div>
+  </div>
+  <div nz-col nzSpan="8">
+    <div #echartsAttendance class="realtime-echarts"></div>
+  </div>
+</div>
