feat: apartment live

--- a/src/app/module/statistics/component/statistics/statistics.component.html
+++ b/src/app/module/statistics/component/statistics/statistics.component.html
@@ -9,3 +9,4 @@
     <div #echartsAttendance class="realtime-echarts"></div>
   </div>
 </div>
+<div #apartment style="width: 400px;height: 400px"></div>
