feat: counselor chart

--- a/src/app/module/statistics/component/statistics/statistics.component.html
+++ b/src/app/module/statistics/component/statistics/statistics.component.html
@@ -9,4 +9,12 @@
     <div #echartsAttendance class="realtime-echarts"></div>
   </div>
 </div>
-<div #apartment style="width: 400px;height: 400px"></div>
+<div nz-row>
+  <div nz-col nzSpan="12">
+
+  </div>
+  <div nz-col nzSpan="12">
+    <div #apartment style="width: 400px;height: 400px"></div>
+  </div>
+</div>
+<div #counselor style="width: 1000px;height: 400px"></div>
