feat: Polyline Data

--- a/src/app/module/statistics/component/statistics/statistics.component.html
+++ b/src/app/module/statistics/component/statistics/statistics.component.html
@@ -11,10 +11,10 @@
 </div>
 <div nz-row>
   <div nz-col nzSpan="12">
-
+    <div #polyline style="width: 500px;height: 400px"></div>
   </div>
   <div nz-col nzSpan="12">
-    <div #apartment style="width: 400px;height: 400px"></div>
+    <div #apartment style="width: 500px;height: 400px"></div>
   </div>
 </div>
 <div #counselor style="width: 1000px;height: 400px"></div>
