--- a/src/app/module/statistics/component/statistics/statistics.component.html
+++ b/src/app/module/statistics/component/statistics/statistics.component.html
@@ -9,7 +9,7 @@
     <div #echartsAttendance class="realtime-echarts"></div>
   </div>
 </div>
-<div>
+<div style="margin: 0 0 16px 5px;">
   <span>数据日期范围：</span>
   <nz-range-picker [(ngModel)]="dateRange" (ngModelChange)="onDateChange($event)"></nz-range-picker>
 </div>
