--- a/src/app/module/login/component/login/login.component.html
+++ b/src/app/module/login/component/login/login.component.html
@@ -1,6 +1,4 @@
-<video #videoElement muted="true"
-       loop="loop" meted="meted"
-       style="height: 100%;width: 100%;position: fixed;object-fit: fill;top:0;">
+<video #videoElement muted loop class="video-info">
   <source src="assets/video/video.m3u8" type="application/x-mpegURL">
 </video>
 <div class="login-box">
